--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-"Hi" 
+<script src="https://code.createjs.com/easeljs-0.8.2.min.js"></script>
+<script type="text/javascript" src="js/Main.js"></script>
+<link rel="stylesheet" type="text/css" href="css/style.css">
+<body onload="init();">
+  <canvas id="mnomCanvas"></canvas>
+</body>
